--- a/2024/03/09.md
+++ b/2024/03/09.md
@@ -1,13 +1,12 @@
-取り組んだ課題一覧
-タイピング練習
-Progate Node.js Ⅱ 完了
-わかったこと
-Expressの立ち上げ
-npmによる各インストール
-EJSの値表示
-次やること
-Progate Node.js Ⅲ 〜
-感じたこと
-Node.js自体元々あまりよくわかっていなかったのでイメージが難しかったのですが、 主にフレームワークでの学習だったのでRailsをよぎらせながら進めています。
-学習時間
-today: 2h
+## 取り組んだ課題一覧
+- タイピング練習
+- Progate Node.js Ⅱ 完了
+## わかったこと
+- データベースとの連携・入力情報の追加
+- リダイレクトの方法
+## 次やること
+- Progate Node.js Ⅲ 〜
+## 感じたこと
+- railsの時よりもスムーズに理解ができている。 
+## 学習時間
+- today: 2h
