--- a/2024/03/17.md
+++ b/2024/03/17.md
@@ -9,6 +9,6 @@
 ## 感じたこと
 - 繁忙期と諸事情あって中々できなかったので、今月難しいですがまた継続できるよう頑張ります。
 - ３月ということもありHappiness Chainの卒業生も何人か出ていますが、皆さんを見ていると
-  モチベーション上がります...追いつけるよう
+  モチベーション上がります...。
 ## 学習時間
 - today: 1.5h
